--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -209,25 +209,31 @@ body{
 
 //START OF ADMIN
 .wholepanel{
-    width:100%;
-    height:100%;
-    background-color:red;
-
-}
-.adminpanel{
-
-
     position:absolute;
     float:left;
+    width:99%;
+    height:100%;
+    background-color:red;
+    
+}
 
+.functions{
+    margin-left:17%;
+    width:80%;
+    height:90%;
+    background-color:#79bbff;
+}
+
+
+.adminpanel{
+    position:absolute;
+    float:left;
     box-shadow:inset 0px 1px 0px 0px #bbdaf7;
     background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
     background-color:#79bbff;
-
     border-radius:6px;
     border:1px solid #84bbf3;
     display:inline-block;
-
     color:#ffffff;
     font-size:15px;
     height:90%;
@@ -265,25 +271,65 @@ body{
     color: white;
 }
 
-#adminsearch{
-    display: none;
-    margin-top : auto;
-    margin-left : auto;
-    position : absolute ;
-    top: 35%;
-    left : 30% ;
-    width:500px;
-    height:100px;
-    background-image:url("img/adminsearchbg.jpg");
-    background-size: cover;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s;
-    padding-left:  100px;
-    padding-top:  100px;
-    padding-bottom:100px;
-    padding-right: 100px;
+.adminsearchresult{
+    display:none;
+}
+
+.searchfunction p{
+    text-decoration: underline;
+}
+
+#adminsearchinput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 900px;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+#adminSearchTable {
+  border-collapse: collapse;
+  width:900px;
+  table-layout:fixed;
+  
+  border: 1px solid #ddd;
+  font-size: 18px;
+}
+
+#adminSearchTable th, #adminSearchTable td {
+  text-align: left;
+  padding: 12px;
+}
+
+#adminSearchTable tr {
+  background-color: darkgray;  
+  border-bottom: 1px solid #ddd;
+  
+}
+
+#adminSearchTable tr.head, #adminSearchTable tr:hover {
+  background-color: #f1f1f1;
+}
+
+#adminSearchTable tbody{
+    overflow:auto;
+}
+
+.old_ie_wrapper {
+  height: 500px;
+  width: 900px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  tbody { height: auto; }
+}
+
+
+
+* {
+  box-sizing: border-box;
 }
 
 //END OF ADMIN
