--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -409,3 +409,158 @@ body{
     text-shadow:0px 1px 0px #810e05;
     width:100%;
 }
+
+#firstPart{
+    float : left;
+    width : 50%;
+    height : 110%;
+    margin-top:10px;             
+}
+
+#secondPart {
+    float : left;
+    width : 50%;
+    height : 110%;
+    margin-top:10px;             
+}
+
+#description {
+    text-align : center;
+    width : 80%;
+    height: 25%;
+    margin-left : 10%;
+    margin-top : 5%;    
+}
+
+#menu {
+    text-align : center;
+    width : 80%;
+    height: 60%;
+    margin-left : 10%;
+    margin-top : 5%;    
+}
+
+#infos {
+    text-align:center;
+    width : 80%;
+    height : 50%;
+    margin-left : 10%;
+    margin-top : 5%;
+}
+
+#restBook {
+    text-align :center;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 80%;
+    position: relative;
+    margin: auto;
+    margin-top : 5%;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 80%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+.restPics{
+    width:100%;
+    height :35%;
+}
+
+#reviews{
+    margin:auto;
+    width:80%;
+    height:60%;
+    overflow-y:scroll;
+    background-color:red;
+    text-align:center;
+}
+
+#full{
+    width:100%;
+    height:110%;
+}
