--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -598,6 +598,7 @@ body{
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid gray;
+
 }
 .formX button {
   padding: 10px;
@@ -606,6 +607,7 @@ body{
   background: #5F9EA0;
   border: none;
   border-radius: 5px;
+  cursor:pointer;
 }
 .error {
   width: 85%; 
