--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -78,6 +78,148 @@ body{
     font-family:Trattatello, fantasy;
     margin-top : 50px;
 }
+/*Support Page*/
+
+#supportHeader{
+    color:black;
+}
+#question{
+    margin-left:4%;
+    display:inline-block;
+    color:black;
+}
+#question1{
+    margin-top:4%;
+    margin-left:4%;
+    font-weight:bold;
+    display:inline-block;
+}
+#answer{
+    color:black;
+    display:inline-block;
+}
+#answer1{
+   font-weight:bold;
+   display:inline-block;
+   
+}
+.supportQA{
+    margin-left:35%;
+    background-color:white;
+    width:35%;
+    height:100%;
+}
+.buttonsQA{
+    margin-top:3%;
+    margin-left:38%;
+}
+.buttonsQA button{
+    margin-left:3%;
+ display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #668ad8;/*ButtonColor*/
+    color: #FFF;
+    border-bottom: solid 4px #627295;
+    border-radius: 3px;
+}
+.buttonsQA button :active {/*OnClick*/
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);/*Move down*/
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);/*Reduce Shadow*/
+    border-bottom: none;
+}
+
+
+/*Support Page*/
+/*Submit a Request Ticket*/
+ .select-css {
+	
+     margin-left:37%;
+     display: block;
+	font-size: 16px;
+	font-family: sans-serif;
+	font-weight: 700;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	width: 20%;
+	max-width: 100%;
+	box-sizing: border-box;
+	
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+	border-radius: .5em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+	background-repeat: no-repeat, repeat;
+	background-position: right .7em top 50%, 0 0;
+	background-size: .65em auto, 100%;
+}
+#subsub{
+    margin-left: 65%;
+    box-shadow:inset 0px 1px 0px 0px #a4e271;
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	background-color:#89c403;
+	border-radius:6px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528009;
+  
+        
+}
+#subsub:hover {
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	background-color:#77a809;
+}
+#subsub:active {
+	position:relative;
+	top:1px;
+}
+
+.select-css::-ms-expand {
+	display: none;
+}
+.select-css:hover {
+	border-color: #888;
+}
+.select-css:focus {
+	border-color: #aaa;
+	box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: #222;
+	outline: none;
+}
+.select-css option {
+	font-weight:normal;
+}
+.tArea{
+    margin-top:5%;
+    margin-left:15%;
+}
+.submitReq{
+  
+    background-color:white;
+    
+    margin-left:30%;
+    width:40%;
+    height:50%;
+}
+
+
+/*Submit a Request Ticket*/
 .container h2{
     margin-top : 100px;
     text-align : center ;
