--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -1,8 +1,8 @@
 
 body{
 
-    /*background-image: url("img/918404.jpg");*/
-    background-color:pink;
+    background-image: url("img/918404.jpg");
+
 
 }
 .top{
