--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -57,7 +57,7 @@ body{
 }
 
 .searchForm {
-    margin-left:25%;
+    margin-left:40%;
 }
 
 .searchinputs{
@@ -136,7 +136,8 @@ body{
 /*Submit a Request Ticket*/
  .select-css {
     
-     margin-left:37%;
+     margin-left:30%;
+     margin-right:30%;
      display: block;
     font-size: 16px;
     font-family: sans-serif;
@@ -144,8 +145,8 @@ body{
     color: #444;
     line-height: 1.3;
     padding: .6em 1.4em .5em .8em;
-    width: 20%;
-    max-width: 100%;
+    width:40%;
+    
     box-sizing: border-box;
     
     border: 1px solid #aaa;
@@ -205,9 +206,11 @@ body{
 .select-css option {
     font-weight:normal;
 }
+
 .tArea{
-    margin-top:5%;
+    margin-top:1%;
     margin-left:15%;
+    width:70%;
 }
 .submitReq{
   
@@ -753,6 +756,10 @@ body{
 
 .formArea{
     margin-top:3%;
+    
+}
+.formArea h3{
+    text-align:center;
 }
 
 .formX, .content {
