--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -99,9 +99,9 @@ body{
     display:inline-block;
 }
 #answer1{
-   font-weight:bold;
-   display:inline-block;
-   
+    font-weight:bold;
+    display:inline-block;
+
 }
 .supportQA{
     margin-left:35%;
@@ -115,7 +115,7 @@ body{
 }
 .buttonsQA button{
     margin-left:3%;
- display: inline-block;
+    display: inline-block;
     padding: 0.5em 1em;
     text-decoration: none;
     background: #668ad8;/*ButtonColor*/
@@ -134,11 +134,11 @@ body{
 
 /*Support Page*/
 /*Submit a Request Ticket*/
- .select-css {
-    
-     margin-left:30%;
-     margin-right:30%;
-     display: block;
+.select-css {
+
+    margin-left:30%;
+    margin-right:30%;
+    display: block;
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 700;
@@ -146,9 +146,9 @@ body{
     line-height: 1.3;
     padding: .6em 1.4em .5em .8em;
     width:40%;
-    
+
     box-sizing: border-box;
-    
+
     border: 1px solid #aaa;
     box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
     border-radius: .5em;
@@ -157,7 +157,7 @@ body{
     appearance: none;
     background-color: #fff;
     background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+        linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
     background-repeat: no-repeat, repeat;
     background-position: right .7em top 50%, 0 0;
     background-size: .65em auto, 100%;
@@ -178,8 +178,8 @@ body{
     padding:6px 24px;
     text-decoration:none;
     text-shadow:0px 1px 0px #528009;
-  
-        
+
+
 }
 #subsub:hover {
     background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
@@ -213,9 +213,9 @@ body{
     width:70%;
 }
 .submitReq{
-  
+
     background-color:white;
-    
+
     margin-left:30%;
     width:40%;
     height:50%;
@@ -362,7 +362,7 @@ body{
     float:left;
     width:99%;
     height:100%;
-   
+
 
 }
 
@@ -371,7 +371,7 @@ body{
     width:80%;
     height:90%;
     display:block;
-    
+
 }
 
 
@@ -425,7 +425,7 @@ body{
     margin-top:55px;
 }
 .functions header{
-    
+
     font-family: Lato, Arial;
     font-weight: normal;
     font-size: 40px;
@@ -436,6 +436,11 @@ body{
 #adminsearch{
     display:none;
 }
+
+#viewBookings{
+    display:none;
+}
+
 #viewTickets{
     display:none;
 }
@@ -471,6 +476,7 @@ body{
     font-size: 18px;
 }
 
+
 #adminSearchTable th, #adminSearchTable td {
     text-align: left;
     padding: 12px;
@@ -493,7 +499,10 @@ body{
 
 }
 
-#adminSearchTable tr.head, #adminSearchTable tr:hover {
+#adminSearchTable tr.head  {
+    background-color: #f1f1f1;
+}
+#adminSearchTable tr:hover{
     background-color: #f1f1f1;
 }
 #viewTicketsTable tr.head, #viewTicketsTable tr:hover {
@@ -756,61 +765,61 @@ body{
 
 .formArea{
     margin-top:3%;
-    
+
 }
 .formArea h3{
     text-align:center;
 }
 
 .formX, .content {
-  width: 30%;
-  margin: 0px auto;
-  padding: 20px;
-  border: 1px solid #B0C4DE;
-  background-color:white;
-  border-radius: 0px 0px 10px 10px;
+    width: 30%;
+    margin: 0px auto;
+    padding: 20px;
+    border: 1px solid #B0C4DE;
+    background-color:white;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .input-group {
-  margin: 10px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
 }
 .input-group label {
-  display: block;
-  text-align: left;
-  margin: 3px;
+    display: block;
+    text-align: left;
+    margin: 3px;
 }
 .input-group input {
-  height: 30px;
-  width: 93%;
-  padding: 5px 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  border: 1px solid gray;
+    height: 30px;
+    width: 93%;
+    padding: 5px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid gray;
 
 }
 .formX button {
-  padding: 10px;
-  font-size: 15px;
-  color: white;
-  background: #5F9EA0;
-  border: none;
-  border-radius: 5px;
-  cursor:pointer;
+    padding: 10px;
+    font-size: 15px;
+    color: white;
+    background: #5F9EA0;
+    border: none;
+    border-radius: 5px;
+    cursor:pointer;
 }
 .error {
-  width: 85%; 
-  margin-left:auto;
-  margin-right:auto;
-  padding: 5px; 
-  border: 1px solid #a94442; 
-  color: #a94442; 
-  background: #f2dede; 
-  border-radius: 3px; 
-  text-align: left;
+    width: 85%; 
+    margin-left:auto;
+    margin-right:auto;
+    padding: 5px; 
+    border: 1px solid #a94442; 
+    color: #a94442; 
+    background: #f2dede; 
+    border-radius: 3px; 
+    text-align: left;
 }
 .success {
-  color: #3c763d; 
-  background: #dff0d8; 
-  border: 1px solid #3c763d;
-  margin-bottom: 20px;
+    color: #3c763d; 
+    background: #dff0d8; 
+    border: 1px solid #3c763d;
+    margin-bottom: 20px;
 }
