--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -927,3 +927,28 @@ body{
     border: 1px solid #ddd;
     font-size: 18px;
 }
+
+#viewMyBookingsTable th, #viewMyBookingsTable td {
+    text-align: left;
+    padding: 12px;
+}
+#viewMyBookingsTable tr {
+    background-color: darkgray;  
+    border-bottom: 1px solid #ddd;
+
+}
+#viewMyBookingsTable tr.head  {
+    background-color: #f1f1f1;
+}
+#viewMyBookingsTable tr:hover{
+    background-color: #f1f1f1;
+}
+
+#viewMyBookingsTable tbody{
+    overflow:auto;
+}
+
+#viewMyBookingsTable th, #viewMyBookingsTable td {
+    text-align: left;
+    padding: 12px;
+}
