--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -477,7 +477,6 @@ body{
 }
 
 #viewRestSignUps{
-    width:100%;
     border-collapse: collapse;
     table-layout:fixed;
     border: 1px solid #ddd;
@@ -504,6 +503,7 @@ body{
     border-bottom: 1px solid #ddd;
 
 }
+
 
 #viewTicketsTable tr {
     background-color: darkgray;  
@@ -539,10 +539,9 @@ body{
     overflow:auto;
 }
 
-
 .old_ie_wrapper {
     max-height: 500px;
-    max-width: 900px;
+    max-width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
     tbody { height: auto; }
