--- a/DOCS/Implementation/Project/style.css
+++ b/DOCS/Implementation/Project/style.css
@@ -454,11 +454,13 @@ body{
     display:none;
 }
 
-#viewTickets{
+#restaurantShutdown{
     display:none;
 }
 
-
+#viewTickets{
+    display:none;
+}
 
 #adminsearchinput {
     background-image: url('/css/searchicon.png');
